--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      p::first-letter {
+        font-size: 30px;
+        float: left;
+        padding: 10px;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <p>
+      I am in the Great Sahara Desert for the third sundown in a row. Fouad and
+      I pass back and forth a sun-bleached map of the stars. It’s more of a
+      tug-of-war to be honest. With what remains of the daylight, we commit to
+      memory the positions of spots on the page. We hope to find some
+      correlation in its negative, which slides overhead as the sun rapidly
+      dies.
+    </p>
+  </body>
 </html>
