--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      p::first-letter {
-        font-size: 30px;
-        float: left;
-        padding: 10px;
-      }
-    </style>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <p>
-      I am in the Great Sahara Desert for the third sundown in a row. Fouad and
-      I pass back and forth a sun-bleached map of the stars. It’s more of a
-      tug-of-war to be honest. With what remains of the daylight, we commit to
-      memory the positions of spots on the page. We hope to find some
-      correlation in its negative, which slides overhead as the sun rapidly
-      dies.
-    </p>
+    <figure>
+      <figcaption>
+        <!--文字内容自定-->
+        <h2>Beauty Makeup</h2>
+        <p>
+          Every Girl loves to be beautiful.
+          <br />
+          As the saying goes, there are no ugly Girl in the world.Only lazy
+          women
+        </p>
+        <a href="#">Get in Touch</a>
+      </figcaption>
+      <img src="./html/blog/imgs/avatar.webp" /><!--图片内容自定-->
+    </figure>
   </body>
 </html>
