--- a/css/css4.html
+++ b/css/css4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>css4</title>
+    <title>三栏布局，顶部固定</title>
     <style>
       body,
       html {
