--- a/css/css2.html
+++ b/css/css2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>css eg</title>
+    <title>css画图形练习</title>
     <link rel="stylesheet" href="./css2.css" />
   </head>
   <body>
