--- a/css/task1-web/index.html
+++ b/css/task1-web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>web page</title>
+    <title>官网</title>
     <link rel="stylesheet" href="./web.css" />
   </head>
   <body>
