--- a/index.html
+++ b/index.html
@@ -6,20 +6,5 @@
     <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
-  <body>
-    <figure>
-      <figcaption>
-        <!--文字内容自定-->
-        <h2>Beauty Makeup</h2>
-        <p>
-          Every Girl loves to be beautiful.
-          <br />
-          As the saying goes, there are no ugly Girl in the world.Only lazy
-          women
-        </p>
-        <a href="#">Get in Touch</a>
-      </figcaption>
-      <img src="./html/blog/imgs/avatar.webp" /><!--图片内容自定-->
-    </figure>
-  </body>
+  <body></body>
 </html>
