--- a/index.html
+++ b/index.html
@@ -6,5 +6,42 @@
     <title>Document</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrap">
+      <div class="btn">
+        <button onclick="toprev()">prev</button>
+        <button onclick="tonext()">next</button>
+      </div>
+      <ul class="ul1" id="ul1">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+      </ul>
+      <!-- <div class="dot">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div> -->
+    </div>
+    <script>
+      let cur = 0;
+      const len = document.getElementsByTagName("li").length;
+      function tonext() {
+        if (cur >= len - 1) {
+          cur = 0;
+        } else {
+          cur += 1;
+        }
+        document.getElementById("ul1").style.marginLeft = -100 * cur + "px";
+      }
+      function toprev() {
+        if (cur <= 0) {
+          cur = len - 1;
+        } else {
+          cur -= 1;
+        }
+        document.getElementById("ul1").style.marginLeft = -100 * cur + "px";
+      }
+    </script>
+  </body>
 </html>
