--- a/css/02-draw.html
+++ b/css/02-draw.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>css画图形练习</title>
-    <link rel="stylesheet" href="./css2.css" />
+    <link rel="stylesheet" href="./02-draw.css" />
   </head>
   <body>
     <!-- task1 -->
