feat: 新增js水仙花

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       <option value="3">33</option>
     </select>
     <script src="./index.js"></script>
+    <script></script>
   </body>
 </html>
