--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <select name="" id="">
-      <option value="1">11</option>
-      <option value="2">22</option>
-      <option value="3">33</option>
-    </select>
     <script src="./index.js"></script>
-    <script></script>
+    <script>
+      console.log("aa21\nsasas");
+    </script>
   </body>
 </html>
