--- a/index.html
+++ b/index.html
@@ -8,44 +8,6 @@
   </head>
   <body>
     <script src="./index.js"></script>
-    <script>
-      const data = [
-        "monday - 500ml",
-        "mONday - 330",
-        "monday - 150ml",
-        "Tuesday - 100ml",
-        "Tuesday - 330ml",
-        "weDnesDay - 230",
-        "TursDAy - 330ml",
-        "Friday - 500",
-        "Saturday - 100ml",
-        "sunday - 250",
-        "sunday - 100ml",
-      ];
-      const transformData = (arr) => {
-        if (!Array.isArray(arr)) {
-          return [];
-        }
-        return arr.map((v) => {
-          const [a1, a2] = v.split("-");
-          const res1 = a1
-            .trim()
-            .toLowerCase()
-            .replace(a1[0], a1[0].toUpperCase());
-          const res2 = a2.trim().includes("ml") ? a2 : a2 + "ml";
-          return res1 + " : " + res2;
-        });
-      };
-      const query = (day, d = data) => {
-        const q = day.toLowerCase().trim();
-        console.log(transformData(d));
-
-        // return transformData(d).filter((v) => v.includes(q));
-      };
-
-      // 测试用例
-      console.log(query(" Tuesday   ")); // ["Tuesday - 100ml","Tuesday - 330ml"]
-      console.log(query("Friday")); // ["Friday - 500ml"]
-    </script>
+    <script></script>
   </body>
 </html>
