--- a/index.html
+++ b/index.html
@@ -7,17 +7,7 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <div>
-      <label>偏移:</label><input type="text" name="offset" size=5 value=3><br>
-      <label>明文:<label></label><input  type="text" name="plain" size=50 value="This is a test."><br>
-      <label>密文:</label><input type="text" name="enc" size=50><br>
-      <input type="button" value="加密" onClick="encrypt()">&nbsp;
-      <input type="button" value="解密" onClick="decrypt()">
-  </div>
-
     <script src="./index.js"></script>
-    <script>
-      // js实现base64加密解密
-    </script>
+    <script></script>
   </body>
 </html>
