--- a/index.html
+++ b/index.html
@@ -8,23 +8,6 @@
   </head>
   <body>
     <script src="./index.js"></script>
-    <script>
-      var menuArr = [
-        [1, "Area1", -1],
-        [2, "Area2", -1],
-        [3, "Area1-1", 1],
-        [4, "Area1-2", 1],
-        [5, "Area2-1", 2],
-        [6, "Area2-2", 2],
-        [7, "Area1-2-3", 4],
-        [8, "Area2-2-1", 6],
-      ];
-
-      function arrToObj(arr) {
-        var obj = {};
-
-        return obj;
-      }
-    </script>
+    <script></script>
   </body>
 </html>
